--- a/clover/src/app/components/car/car-filter/RentCar/rent-car/rent-car.component.html
+++ b/clover/src/app/components/car/car-filter/RentCar/rent-car/rent-car.component.html
@@ -1,50 +1,29 @@
 <h1 mat-dialog-title> {{car.brand}} {{car.model}}</h1>
 <div class="image" style="content:url({{car.imgUrl}})"></div>
 
-  
 
-  <form #form="ngForm" [formGroup]="reservationForm" autocomplete="off" (ngSubmit)="onSubmit(form)" id="signup-form" class="signup-form">
+
+<form #form="ngForm" [formGroup]="reservationForm" autocomplete="off" (ngSubmit)="onSubmit()" id="signup-form"
+  class="signup-form">
 
   <div class="row">
     <div class="col-md-3">
       <div class="form-group">
         <span class="form-label">Start Date</span>
-        <input formControlName="startDate" style="width: 175px;" class="form-control" type="date" id="startDate" name="startDate" required>
+        <input formControlName="startDate" style="width: 175px;" class="form-control" type="date" id="startDate"
+          name="startDate" required>
       </div>
     </div>
 
     <div class="col-md-3">
       <div class="form-group">
         <span style="margin-left: 40px;" class="form-label">End Date</span>
-        <input formControlName="endDate" style="width: 175px; margin-left: 40px;" class="form-control" type="date" id="endDate" name="endDate" required>
+        <input formControlName="endDate" style="width: 175px; margin-left: 40px;" class="form-control" type="date"
+          id="endDate" name="endDate" required>
       </div>
     </div>
   </div>
 
-  <div class="row">
-    <!-- <div class="col-md-3">
-      <div class="form-group">
-        <span class="form-label">Start Location</span>
-        <input #startOffice="ngModel" [(ngModel)]="reservationService.formData.startOffice" style="width: 175px;" class="form-control" type="text" placeholder="Start Location" id="startOffice" name="startOffice" required> -->
-
-
-        <!-- <select class="form-control">
-          <div *ngFor="let f of this.rentService.serviceOffice">
-            <option>{{f.officeName}}</option>
-          </div>
-        </select> -->
-
-
-      <!-- </div>
-    </div> -->
-
-    <!-- <div class="col-md-3">
-      <div class="form-group">
-        <span style="margin-left: 40px;" class="form-label">End Location</span>
-        <input #endOffice="ngModel" [(ngModel)]="reservationService.formData.endOffice" style="width: 175px; margin-left: 40px;" class="form-control" type="text" placeholder="End Location" id="endOffice" name="endOffice" required>
-      </div>
-    </div> -->
-  </div>
 
   <div class="form-group">
     Total Price: {{car.pricePerDay}}
@@ -57,3 +36,24 @@
   <button mat-dialog-close> Close</button>
 
 </form>
+
+
+<div class="row">
+  <div class="col-md-3">
+    <div class="form-group">
+      <span class="form-label">Start Location</span>
+      <select [(ngModel)]="startOffice" class="form-control">
+        <option *ngFor="let f of this.rentService.serviceOffice" [ngValue]="f">{{f.officeName}}</option>
+      </select>
+    </div>
+  </div>
+
+  <div class="col-md-3">
+    <div class="form-group">
+      <span class="form-label">End Location</span>
+      <select [(ngModel)]="endOffice" class="form-control">
+        <option *ngFor="let f of this.rentService.serviceOffice" [ngValue]="f">{{f.officeName}}</option>
+      </select>
+    </div>
+  </div>
+</div>
