--- a/clover/src/app/components/register-user/register-user.component.css
+++ b/clover/src/app/components/register-user/register-user.component.css
@@ -406,3 +406,86 @@ body, html {
     margin-top: -26%;
     margin-left: -6%;
   }
+
+
+  .div1{
+    background-color: rgba(255, 255, 255, 0.808);
+    width: 1000px;
+    height: 145px;
+    top:10px;
+    border-radius: 10px;
+    position: relative;
+  
+    
+  }
+  .div2{
+    position: absolute;
+    left: 14px;
+    top: 14px;
+  }
+  .div3From{
+    font-family: "Lucida Console";
+    font-size: 150%;
+    position: absolute;
+    left: 14px;
+    top: 54px;
+  }
+  div.image {
+    position: absolute;
+    width: 530px;
+    height: 100px;
+    left: 250px;
+    top: 12px;
+    content:url(//avio.png);
+   
+  }
+  .image2 {
+    position: absolute;
+    width: 530px;
+    height: 100px;
+    left: 20px;
+    top: 12px;
+    content:url(../company-profile/1200px-Wizz_Air_logo_2015.svg.png);
+   
+  }
+  .div4{
+    position: absolute;
+    right: 14px;
+    top: 14px;
+  }
+  .div5To{
+    font-family: "Lucida Console";
+    font-size: 150%;
+    position: absolute;
+    right: 34px;
+    top: 54px;
+  }
+  .divName{
+    font-family: "Impact";
+    font-size: 150%;
+    position: absolute;
+    left: 480px;
+    top: 14px;
+    
+  }
+  .btn2{
+    position: absolute;
+    right: 34px;
+    bottom: 3px;
+  }
+  .myButton2 {
+  box-shadow: 0px 1px 0px 0px #f0f7fa;
+  background:linear-gradient(to bottom, #33bdef 5%, #019ad2 100%);
+  background-color:#33bdef;
+  border-radius:11px;
+  border:1px solid #057fd0;
+  display:inline-block;
+  cursor:pointer;
+  color:#ffffff;
+  font-family:Arial;
+  font-size:15px;
+  font-weight:bold;
+  padding:9px 24px;
+  text-decoration:none;
+  text-shadow:0px -1px 0px #5b6178;
+  }
