--- a/clover/src/app/components/register-user/sing-up-flight-admin/sing-up-flight-admin/sing-up-flight-admin.component.html
+++ b/clover/src/app/components/register-user/sing-up-flight-admin/sing-up-flight-admin/sing-up-flight-admin.component.html
@@ -1,11 +1,11 @@
 <section class="signup">
     <form #form="ngForm" autocomplete="off" (ngSubmit)="onSubmit(form)" id="signup-form" class="signup-form">
 
-      <input type="hidden" name="userId" [value]="service.formData.UserId">
+      <input type="hidden" name="userId" [value]="service.formData.userId">
 
       <div style="margin-left: 16px;" class="row">
         <div class="form-group">
-            <input #Name="ngModel" [(ngModel)]="service.formData.Name" name="name" type="text" id="Name" class="form-input" placeholder="Name" required/>
+            <input #Name="ngModel" [(ngModel)]="service.formData.name" name="name" type="text" id="Name" class="form-input" placeholder="Name" required/>
             <div class="validation-error" *ngIf="Name.invalid && Name.touched">This field is required</div>
         </div>
 
