--- a/clover/src/app/app.component.html
+++ b/clover/src/app/app.component.html
@@ -5,8 +5,8 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="">Home <span class="sr-only">(current)</span></a>
+      <li class="nav-item active" *ngIf="IsSignedIn()">
+        <a class="nav-link" routerLink="register-user">Home <span class="sr-only">(current)</span></a>
       </li>
       <li *ngIf="!IsSignedIn()" class="nav-item">
         <a  class="nav-link" routerLink="sing-in">Sing In</a>
