--- a/clover/src/app/components/car/add-car/add-car.component.html
+++ b/clover/src/app/components/car/add-car/add-car.component.html
@@ -80,6 +80,6 @@
       <input type="submit" [disabled]="form.invalid" name="submit" id="submit" class="form-submit" value="Add Car"/>
   </div>
 
-  <button mat-dialog-close> Close</button>
+  <button onclick="Close()"> Close</button>
   
 </form>
