--- a/clover/src/app/components/car/car-filter/RentCar/rent-car/rent-car.component.html
+++ b/clover/src/app/components/car/car-filter/RentCar/rent-car/rent-car.component.html
@@ -57,3 +57,10 @@
     </div>
   </div>
 </div>
+
+
+
+<!-- <div *ngFor="let f of this.reservationService.list">
+  <p>{{f.startDate}}</p>
+  <p>{{f.endDate}}</p>
+</div> -->
