--- a/clover/src/app/components/car/rent-a-car-filter/admin-info/admin-info.component.html
+++ b/clover/src/app/components/car/rent-a-car-filter/admin-info/admin-info.component.html
@@ -19,14 +19,5 @@
     </div>
     
     
-    <div class="main">
-      <div *ngIf="display === 'ServiceRate'">
-        <app-service-rate></app-service-rate>
-      </div>
-
-      <div *ngIf="display === 'CarRate'">
-        <app-car-rate></app-car-rate>
-      </div>
-
-    </div>
   </div> 
+  <p style="margin-top: 1%; margin-left: 45%;"> Welcome Admin</p>
