--- a/clover/src/app/components/car/rent-a-car-filter/admin-info/service-rate/service-rate.component.html
+++ b/clover/src/app/components/car/rent-a-car-filter/admin-info/service-rate/service-rate.component.html
@@ -1,1 +1,23 @@
-<p>service-rate works!</p>
+<div class="nav">
+    <div class="nav-agileinfo"> 
+      <div id="owl-demo" class="owl-carousel owl-theme"><!-- owl-carousel -->
+        <div class="item">
+          <div class="pricing pricing-two">
+            <div class="pricing-bottom"> 
+            <div class="agileits-buy">
+               <div class="row" style="margin-left: -10%; margin-top: -25%;" >
+                <a class="popup-with-zoom-anim" style="width: 190px; height: 60px;" (click)="onServiceRate()">Average Service Rate</a>
+                <a class="popup-with-zoom-anim" style="width: 176px; height: 60px;" (click)="onCarRate()">Car Rate</a>
+                <a class="popup-with-zoom-anim" style="width: 176px; height: 60px;" (click)="onGraph()">Graph</a>
+                <a class="popup-with-zoom-anim" style="width: 176px; height: 60px;" (click)="onRevenues()">Revenues</a>
+               </div>
+              </div>
+            </div>
+          </div> 
+        </div> 
+      </div>	
+    </div>
+</div>
+
+
+    <p style="margin-left: 50%;">{{this.rentService.description}}</p>
