--- a/clover/src/app/components/car/rent-a-car/cars-rent/cars-rent/cars-rent.component.html
+++ b/clover/src/app/components/car/rent-a-car/cars-rent/cars-rent/cars-rent.component.html
@@ -18,7 +18,9 @@
         <div class="col-md-3">
           <div class="form-group">
             <span class="form-label">Start Location</span>
-            <input class="form-control" type="text" placeholder="Start Location" id="startLocationFilter">
+            <select [(ngModel)]="startOffice" class="form-control">
+              <option *ngFor="let f of this.rentService.serviceOffice" [ngValue]="f">{{f.officeName}}</option>
+            </select>
           </div>
         </div>
 
@@ -57,13 +59,15 @@
       </div>
       
       <div class="row">
-        
         <div class="col-md-3">
           <div class="form-group">
             <span class="form-label">End Location</span>
-            <input class="form-control" type="text" placeholder="End Location" id="endLocationFilter">
+            <select [(ngModel)]="endOffice" class="form-control">
+              <option *ngFor="let f of this.rentService.serviceOffice" [ngValue]="f">{{f.officeName}}</option>
+            </select>
           </div>
         </div>
+        
         <div class="col-md-3">
           <div class="form-group">
             <span class="form-label">End Date</span>
