--- a/clover/src/app/components/car/rent-a-car/locations-rent/locations-rent/add-office/add-office/add-office.component.html
+++ b/clover/src/app/components/car/rent-a-car/locations-rent/locations-rent/add-office/add-office/add-office.component.html
@@ -32,6 +32,6 @@
         <input type="submit" [disabled]="form.invalid" name="submit" id="submit" class="form-submit" value="Add Office"/>
     </div>
   
-    <button mat-dialog-close> Close</button>
+    <button onclick="Close()"> Close</button>
     
   </form>
