--- a/clover/src/app/components/payment/payment.component.html
+++ b/clover/src/app/components/payment/payment.component.html
@@ -16,6 +16,8 @@
                 </div>
               
 
+                <button *ngIf="dalijeadmin()" class="myButton2">Payflight </button>
+
              <div class="plane">
   <div class="cockpit">
     <h1>Please select a seat</h1>
