--- a/clover/src/app/components/payment/payment.component.css
+++ b/clover/src/app/components/payment/payment.component.css
@@ -198,6 +198,24 @@ body, html {
     }
   }
   
+
+  .myButton2 {
+    box-shadow: 0px 1px 0px 0px #f0f7fa;
+    background:linear-gradient(to bottom, #33bdef 5%, #019ad2 100%);
+    background-color:#33bdef;
+    border-radius:11px;
+    border:1px solid #057fd0;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Arial;
+    font-size:15px;
+    font-weight:bold;
+    padding:9px 24px;
+    text-decoration:none;
+    text-shadow:0px -1px 0px #5b6178;
+    }
+
   .exit {
     position: relative;
     height: 50px;
