--- a/clover/src/app/components/sing-in/sing-in.component.html
+++ b/clover/src/app/components/sing-in/sing-in.component.html
@@ -34,12 +34,12 @@
                       </div>
   
                     <div class="form-group">
-                        <input type="submit" [disabled]="singInForm.invalid" (click)=becomeAUser() name="submit" id="submit" class="form-submit" value="Sign in"/>
+                        <input type="submit" [disabled]="singInForm.invalid" name="submit" id="submit" class="form-submit" value="Sign in"/>
                     </div>
 
                     <div class="d-flex justify-content-around">
                         <div>
-                            <a href="" (click)=becomeAAdmin()>Remember me</a>
+                            <a href="">Remember me</a>
                         </div>
                         <div> 
                             <a href="">Forgot password?</a>
