--- a/clover/src/app/components/car/rent-a-car/cars-rent/cars-rent/cars-rent.component.html
+++ b/clover/src/app/components/car/rent-a-car/cars-rent/cars-rent/cars-rent.component.html
@@ -100,16 +100,12 @@
           <p style="color:lavenderblush; margin-left: 12%; margin-bottom: 20%;"> Sort</p>
           <div class="input-field fifth-wrap">
             <div class="row">
-              <input type="radio" value="name" name="sort" style="height: 1em; margin-left: -47%;">
-              <p style="color:lavenderblush; margin-left: -40%; margin-top: -1%;"> Name</p>
+              <input type="radio" value="brand" #mySelection1 (click)="Sort1(mySelection1.value)" name="sort" style="height: 1em; margin-left: -47%;">
+              <p style="color:lavenderblush; margin-left: -40%; margin-top: -1%;"> Brand</p>
             </div>
             <div class="row">
-              <input type="radio" value="city" name="sort" style="height: 1em; margin-left: -47%;">
-              <p style="color:lavenderblush; margin-left: -40%; margin-top: -1%;"> City</p>
-            </div>
-            <div class="row">
-              <input type="radio" value="distance" name="sort" style="height: 1em; margin-left: -47%;">
-              <p style="color:lavenderblush; margin-left: -40%; margin-top: -1%;"> Distance</p>
+              <input type="radio" value="model" name="sort" #mySelection2 (click)="Sort1(mySelection2.value)" style="height: 1em; margin-left: -47%;">
+              <p style="color:lavenderblush; margin-left: -40%; margin-top: -1%;"> Model</p>
             </div>
           </div>
         </div>
