--- a/clover/src/app/components/payment/payment.component.html
+++ b/clover/src/app/components/payment/payment.component.html
@@ -16,16 +16,33 @@
                 </div>
               
 
-                <button *ngIf="dalijeadmin()" class="myButton2">Payflight </button>
-
-             <div class="plane">
+                <button *ngIf="dalijeadmin()" class="myButton2" (click)="finalPay()">Payflight </button>
+                <label> You need to pay:{{seatPrice}}</label>
+             <!-- <div class="plane">
   <div class="cockpit">
     <h1>Please select a seat</h1>
   </div>
   <div class="exit exit--front fuselage">
 
-  </div>
-  <ol class="cabin fuselage">
+  </div> -->
+
+
+
+<div class="wrapper" *ngFor="let seat of sortedSeats">
+    <ol class="cabin fuselage">
+  <li class="row row--1">
+    <ol class="seats" type="A">
+      <li class="seat">
+        <input type="checkbox" id="1A" (click)="reserve(seat)" />
+        <label for="1A">{{seat.number2}}</label>
+      </li>
+    </ol>
+    </li>
+    </ol>
+    <!-- <button>{{seat.number2}} </button> -->
+</div>
+
+  <!-- <ol class="cabin fuselage">
     <li class="row row--1">
       <ol class="seats" type="A">
         <li class="seat">
@@ -306,11 +323,11 @@
         </li>
       </ol>
     </li>
-  </ol>
-  <div class="exit exit--back fuselage">
+  </ol> -->
+  <!-- <div class="exit exit--back fuselage"> -->
 
-  </div>
-</div>
+  <!-- </div>
+</div> -->
 
 
 
