#AB36 - Fast reservation

--- a/clover/src/app/components/payment/payment.component.html
+++ b/clover/src/app/components/payment/payment.component.html
@@ -17,6 +17,8 @@
               
 
                 <button *ngIf="dalijeadmin()" class="myButton2" (click)="finalPay()">Payflight </button>
+                <button class="myButton2" (click)="rentCar()">Rent A Car </button>
+                
                 <label> You need to pay:{{seatPrice}}</label>
              <!-- <div class="plane">
   <div class="cockpit">
