--- a/clover/src/app/components/register-user/register-user.component.html
+++ b/clover/src/app/components/register-user/register-user.component.html
@@ -1,5 +1,5 @@
-
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+
 <body>
     <div class="bg">
         <div class="container" style="margin-top: 30px;">
@@ -8,7 +8,8 @@
                 <div class="col-md-3">
                     <div class="profile-sidebar">
                         <div class="profile-userpic">
-                            <img src="https://pngimage.net/wp-content/uploads/2018/06/photo-profil-png-1.png" class="img-responsive" alt="">
+                            <img src="https://pngimage.net/wp-content/uploads/2018/06/photo-profil-png-1.png"
+                                class="img-responsive" alt="">
                         </div>
                         <div class="profile-usertitle">
                             <div class="profile-usertitle-name">
@@ -27,33 +28,38 @@
                             <ul class="nav">
                                 <li (click)="ispisRezervacija()">
                                     <a routerLink="/register-user">
-                                    <i class="glyphicon glyphicon-list"></i>
-                                    Reservation </a>
+                                        <i class="glyphicon glyphicon-list"></i>
+                                        Reservation Flights</a>
+                                </li>
+                                <li (click)="ispisRezervacijaCars()">
+                                    <a routerLink="/register-user">
+                                        <i class="glyphicon glyphicon-list"></i>
+                                        Reservation Cars </a>
                                 </li>
                                 <li (click)="ispisPrijatelja()">
                                     <a routerLink="/register-user">
-                                    <i class="glyphicon glyphicon-user"></i>
-                                    Friend List </a>
+                                        <i class="glyphicon glyphicon-user"></i>
+                                        Friend List </a>
                                 </li>
                                 <li (click)="ispisZahteva()">
-                                    <a routerLink="/register-user" >
-                                    <i class="glyphicon glyphicon-user"></i>
-                                    Friend request </a>
+                                    <a routerLink="/register-user">
+                                        <i class="glyphicon glyphicon-user"></i>
+                                        Friend request </a>
                                 </li>
                                 <li>
                                     <a routerLink="/register-user">
-                                    <i class="glyphicon glyphicon-time"></i>
-                                    History </a>
+                                        <i class="glyphicon glyphicon-time"></i>
+                                        History </a>
                                 </li>
                                 <li>
                                     <a routerLink="/register-user">
-                                    <i class="glyphicon glyphicon-list-alt"></i>
-                                    Your invites </a>  
+                                        <i class="glyphicon glyphicon-list-alt"></i>
+                                        Your invites </a>
                                 </li>
                                 <li>
                                     <a routerLink="/register-user">
-                                    <i class="glyphicon glyphicon-wrench"></i>
-                                    Account Settings </a>
+                                        <i class="glyphicon glyphicon-wrench"></i>
+                                        Account Settings </a>
                                 </li>
                             </ul>
                         </div>
@@ -61,108 +67,117 @@
                 </div>
 
                 <div class="col-md-9">
-                    <div  >
-                       Ovde ce se prikazivati Reservation, Friend List, Your invites,
-                       <div *ngFor="let rUser of allRegistredUsers" class="div1">
-                        <div class="div2"></div>
-                        <div class="div3From">{{rUser.email}}</div>
-                        <div class="image"></div>
-                        <div class="div4"></div>
-                        <div class="div5To">{{rUser.name}}</div>
-                        <div class="divName"></div>
-                        <div class="btn2">
-                        <button (click)="addFriend(rUser)" class="myButton2">Add </button>
+                    <div>
+                        <div *ngFor="let rUser of allRegistredUsers" class="div1">
+                            <div class="div2"></div>
+                            <div class="div3From">{{rUser.email}}</div>
+                            <div class="image"></div>
+                            <div class="div4"></div>
+                            <div class="div5To">{{rUser.name}}</div>
+                            <div class="divName"></div>
+                            <div class="btn2">
+                                <button (click)="addFriend(rUser)" class="myButton2">Add </button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                </div>
+
+                
+
+                <div class="col-md-9">
+                    <div>
+                        <div *ngFor="let rUser of allReservation" class="div1">
+                            <div class="div2"></div>
+                            <div class="div3From">FROM:{{rUser.reservedFlight.from}}</div>
+                            <div>BROJ SEDISTA:{{rUser.reservedSeat.number2}}</div>
+                        </div>
                     </div>
                 </div>
 
                 <div class="col-md-9">
-                        <div  >
-                           Ovde ce se prikazivati Reservation, Friend List, Your invites,
-                           <div *ngFor="let rUser of allReservation" class="div1">
+                    <div>
+                        <div *ngFor="let rUser of allReservationCars" class="div1">
                             <div class="div2"></div>
-                            <div class="div3From">FROM:{{rUser.reservedFlight.from}}</div>
-                            <div >BROJ SEDISTA:{{rUser.reservedSeat.number2}}</div>
-
-                            
-                   
-                    </div>
+                            <div class="div3From">Model:{{rUser.car.model}}</div>
+                            <div class="div3From" style="margin-left: 15%;">Brand:{{rUser.car.brand}}</div>
+                            <div>Pocetni datum:{{rUser.startDate}}</div>
+                            <div>Krajnji datum:{{rUser.endDate}}</div>
                         </div>
                     </div>
+                </div>
 
 
 
 
 
-                <div  >
-                    Ovde ce se prikazivati frinedreq
+                <div>
                     <div *ngFor="let friend of allFriendsReq" class="div1">
-                     <div class="div2"></div>
-                     <div class="div3From">{{friend.userEmail1}}</div>
-                     <div class="image"></div>
-                     <div class="div4"></div>
-                     <!-- <div class="div5To">{{friend.userEmail2}}</div> -->
-                     <div class="divName"></div>
-                     <div class="btn2">
-                     <button (click)="acceptFrind(friend)" class="myButton2">Accept </button>
-                     <button (click)="ignoreFfriend(friend)" class="myButton2">Ignore </button>
-             </div>
-             </div>
-                 </div>
+                        <div class="div2"></div>
+                        <div class="div3From">{{friend.userEmail1}}</div>
+                        <div class="image"></div>
+                        <div class="div4"></div>
+                        <!-- <div class="div5To">{{friend.userEmail2}}</div> -->
+                        <div class="divName"></div>
+                        <div class="btn2">
+                            <button (click)="acceptFrind(friend)" class="myButton2">Accept </button>
+                            <button (click)="ignoreFfriend(friend)" class="myButton2">Ignore </button>
+                        </div>
+                    </div>
+                </div>
 
-                 <div  >
-                    Ovde ce se prikazivati frined
+                <div>
                     <div *ngFor="let friend of acceptedFriends" class="div1">
-                     <div class="div2"></div>
-                     <div class="div3From" >{{friend.userEmail2}}</div>
-                     <!-- <div class="div3From" >{{friend.userEmail1}}</div> -->
-                 
-                     <div class="btn2">
-                     <button (click)="deleteFriend(friend)" class="myButton2">Delete </button>
-                    
-             </div>
-             
-             </div>
-             <div *ngFor="let friend of pom1" class="div1">
-                <div class="div2"></div>
-                <div class="div3From" >{{friend.userEmail1}}</div>
-                <!-- <div class="div3From" >{{friend.userEmail1}}</div> -->
-            
-                <div class="btn2">
-                <button (click)="deleteFriend(friend)" class="myButton2">Delete </button>
-               
-        </div>
-        
-        </div>
-                 </div>
+                        <div class="div2"></div>
+                        <div class="div3From">{{friend.userEmail2}}</div>
+                        <!-- <div class="div3From" >{{friend.userEmail1}}</div> -->
+
+                        <div class="btn2">
+                            <button (click)="deleteFriend(friend)" class="myButton2">Delete </button>
+
+                        </div>
+
+                    </div>
+                    <div *ngFor="let friend of pom1" class="div1">
+                        <div class="div2"></div>
+                        <div class="div3From">{{friend.userEmail1}}</div>
+                        <!-- <div class="div3From" >{{friend.userEmail1}}</div> -->
+
+                        <div class="btn2">
+                            <button (click)="deleteFriend(friend)" class="myButton2">Delete </button>
+
+                        </div>
+
+                    </div>
+                </div>
 
             </div>
         </div>
 
         <div class="admin" [hidden]="check()">
-            <div class="s002" >
-              <form>
-                <div class="inner-form">
-                  <div class="input-field fifth-wrap">
-                    <p style="color:lavenderblush; margin-left: 35%;"> Admin Services</p>
-                    <div class="input-field fifth-wrap">
-                      <button class="btn-search" style="font-size: small" type="button" (click)="onAddRentService()">Add Rent Admin</button>
+            <div class="s002">
+                <form>
+                    <div class="inner-form">
+                        <div class="input-field fifth-wrap">
+                            <p style="color:lavenderblush; margin-left: 35%;"> Admin Services</p>
+                            <div class="input-field fifth-wrap">
+                                <button class="btn-search" style="font-size: small" type="button"
+                                    (click)="onAddRentService()">Add Rent Admin</button>
+                            </div>
+                            <div class="input-field fifth-wrap">
+                                <button class="btn-search" style="font-size: small" type="button"
+                                    (click)="onAddFlightService()">Add Fligth Admin</button>
+                            </div>
+                        </div>
                     </div>
-                    <div class="input-field fifth-wrap">
-                        <button class="btn-search" style="font-size: small" type="button" (click)="onAddFlightService()">Add Fligth Admin</button>
-                      </div>
-                  </div>
-                </div>
-              </form>
+                </form>
             </div>
-          </div>
-          <form class="form-inline">
+        </div>
+        <form class="form-inline">
             <div class="md-form my-0" style="margin-left: 750px;">
-              <input class="form-control mr-sm-2" type="text" placeholder="Find Frends" aria-label="Search">
-              <button type="button"  class="btn btn-success btn-sm">Find</button>
+                <input class="form-control mr-sm-2" type="text" placeholder="Find Frends" aria-label="Search">
+                <button type="button" class="btn btn-success btn-sm">Find</button>
             </div>
-          </form>
+        </form>
 
     </div>
 </body>
