--- a/clover/src/app/components/register-user/register-user.component.html
+++ b/clover/src/app/components/register-user/register-user.component.html
@@ -96,7 +96,7 @@
 
                 <div class="col-md-9">
                     <div>
-                        <div *ngFor="let rUser of allReservationCars" class="div1">
+                        <div *ngFor="let rUser of filtredReservationCars" class="div1">
                             <div class="div2"></div>
                             <div class="div3From">Model:{{rUser.car.model}}</div>
                             <div class="div3From" style="margin-left: 15%;">Brand:{{rUser.car.brand}}</div>
