--- a/clover/src/app/components/company-profile/company-profile.component.html
+++ b/clover/src/app/components/company-profile/company-profile.component.html
@@ -149,7 +149,7 @@
                  </div>
                  <div class="form-group">
                         Classf:
-                                <input name="classf" #classf="ngModel" [(ngModel)]="service.formData.classf"  id="classf" class="form-control" type="text" placeholder="Price" required>
+                                <input name="classf" #classf="ngModel" [(ngModel)]="service.formData.classf"  id="classf" class="form-control" type="text" placeholder="class" required>
                 </div>
                 <div class="form-group">
                         Baggage:
