--- a/clover/src/app/components/flights/search-flight/search-flight.component.html
+++ b/clover/src/app/components/flights/search-flight/search-flight.component.html
@@ -1,15 +1,15 @@
 <div class="conteiner3" id="style-22">
-    <div class="inp1"><input type="text" class="inp" name="min" placeholder="lowest price.."></div>
+    <div class="inp1"><input type="text" class="inp" name="min" placeholder="highest price.." [(ngModel)]="searchPrice" ></div>
     <div class="inp2"><input type="text" class="inp" name="max" placeholder="duration" [(ngModel)]="searchDuration"></div>
     <div class="inp3"><input type="text" class="inp" name="cnm" placeholder=" company name.." [(ngModel)]="searchCompanyName"></div>
-    <div class="btn11"><button class="button1">filter</button></div>
+   
     <!--<div class="slctComp"> <select class="inp" name="country">
             <option value="australia">Wizzair</option>
             <option value="canada">Rayanair</option>
             <option value="usa">USA</option>
           </select></div>-->
         
-    <div *ngFor="let flight of searchedFlights | flightFilter:searchCompanyName |flightFilter:searchDuration " class="div1">
+    <div *ngFor="let flight of searchedFlights | flightFilter: searchCompanyName | flightFilter2: searchDuration | flightFilter3:searchPrice" class="div1">
             <div class="div2">{{flight.departing.toLocaleString()}}</div>
             <div class="div3From">{{flight.from}}</div>
             <div class="image"></div>
