--- a/clover/src/app/components/car/add-car/change-car/change-car.component.html
+++ b/clover/src/app/components/car/add-car/change-car/change-car.component.html
@@ -76,6 +76,12 @@
         <input #rate="ngModel" [(ngModel)]="service.formData.rate" name="rate" type="text" class="form-input" id="rate" placeholder="{{car.rate}}" required/>
         <div class="validation-error" *ngIf="rate.invalid && rate.touched">This field is required</div>
       </div>
+
+      <div class="form-group">
+        Sale:
+        <input #sale="ngModel" [(ngModel)]="service.formData.sale" name="sale" type="text" class="form-input" id="sale" placeholder="{{car.sale}}" required/>
+        <div class="validation-error" *ngIf="sale.invalid && sale.touched">This field is required</div>
+      </div>
   
       <div class="form-group">
         <input type="submit" [disabled]="form.invalid" name="submit" id="submit" class="form-submit" value="Change Car"/>
