#AB37 - Rent Admin change password

--- a/clover/src/app/components/register-user/register-user.component.html
+++ b/clover/src/app/components/register-user/register-user.component.html
@@ -67,6 +67,11 @@
                                         <i class="glyphicon glyphicon-wrench"></i>
                                         Account Settings </a>
                                 </li>
+                                <li [hidden]="checkAdmin()">
+                                    <a routerLink="/register-user/change-password">
+                                        <i class="glyphicon glyphicon-wrench"></i>
+                                        Admin Settings </a>
+                                </li>
                             </ul>
                         </div>
                     </div>
